# MaHeuGroupProject

./: .gitignore  README.md  encoding.py  evaluate.py  greedy.py  main.py  parse.py  parsing.py  pyproject.toml  translate_to_mip.py  verifying.py
.github/workflows/: tests.yml
data/: CaseMaHeu25_01_instance_base_data.csv  CaseMaHeu25_01_instance_planned_capacity_data.csv  CaseMaHeu25_01_instance_realised_capacity_data_001.csv  CaseMaHeu25_01_instance_realised_capacity_data_002.csv  CaseMaHeu25_01_instance_realised_capacity_data_004.csv  CaseMaHeu25_01_instance_realised_capacity_data_007.csv  CaseMaHeu25_01_instance_realised_capacity_data_008.csv  CaseMaHeu25_01_instance_vehicle_data.csv  instance_capacity_history.csv  instance_realised_capacity_data_003.csv  realised_capacity_data_005.csv
data/CaseMaHeu25_01/: realised_capacity_data_006.csv  realised_capacity_data_009.csv  realised_capacity_data_010.csv
data/CaseMaHeu25_02/: CaseMaHeu25_02_instance_planned_capacity_data.csv  CaseMaHeu25_02_instance_realised_capacity_data_001.csv  CaseMaHeu25_02_instance_realised_capacity_data_003.csv  base_data.csv  capacity_history.csv  (+9 more)
results/: NOTES_01_07_25.md
scripts/: account_for_horizon_effects.py  copy_from_hpc.sh  copy_over_to_notable.py  create_difference.py  hpc_run.sh  hpc_run_deterministic.sh  hpc_run_mip.sh  hpc_run_mip_real_time_one.sh  hpc_run_mip_real_time_two.sh  plot.py  plotstyle.mplstyle  quantile_create_difference.py  quantile_find_best.py  quantile_plot.py  quantile_plot2.py  remove_timestamp_from_result_files.py  run_all.py  run_all_realised_capacity.py
(+1527 files in other folders)
