[project]
name = "MaHeuGroupProject"
version = "0.1.0"
description = "Group project in the course on Mathematical Heuristics in Discrete Optimization at RWTH Aachen University, Summer Term 2025."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mip>=1.15.0",
    "networkx>=3.5",
]
