[project]
name = "MaHeuGroupProject"
version = "0.1.0"
description = "Group project in the course on Mathematical Heuristics in Discrete Optimization at RWTH Aachen University, Summer Term 2025."
readme = "README.md"
requires-python = ">=3.11"
packages = [{ include = "src" }]
dependencies = [
    "matplotlib>=3.10.3",
    "mip>=1.15.0",
    "networkx>=3.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = [
    "src/tests",
]